--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.27.2",
     "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0",
+    "create-admin": "^0.0.1",
     "dotenv-webpack": "^8.0.1",
     "express": "^4.18.1",
     "fs-extra": "^10.1.0",
